--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "@polkadot/api": "^7.13.1",
+    "@polkadot/extension-dapp": "^0.42.9",
+    "@polkadot/keyring": "^8.6.1",
+    "@polkadot/util": "^8.6.1",
+    "@polkadot/util-crypto": "^8.6.1",
+    "@polkadot/wasm-crypto": "^5.0.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
